<resources>
    <string name="app_name">宝灵通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_disconnecting">Disonnecting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_abored">Aborted</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_uploading_msg">Transmitting application to %s…</string>
    <string name="dfu_status_validating_msg">Validating application…</string>
    <string name="dfu_status_completed_msg">Application has been send successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="set_family_name">设置亲情号</string>
    <string name="tv_setting">设置</string>
    <string name="title_hint">提示</string>
    <string name="has_no_child">请先添加对象，再使用其他功能！</string>
    <string name="title_warning">温馨提示</string>
    <string name="watch_taken_off">温馨提示，%s的手表已经脱落！</string>
    <string name="out_of_areas">对象%s已超出安全区域，请注意！</string>
    <string name="btn_ok">确定</string>
    <string name="change_password">修改密码</string>
    <string name="changing_password">正在修改密码</string>
    <string name="current_account">当前账号</string>
    <string name="old_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="hint_old_password">请输入原密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="old_password_incorrect">原密码错误</string>
    <string name="change_password_failed">修改密码失败</string>
    <string name="password_is_same">新旧密码相同，请重新设置</string>
    <string name="change_password_success">成功修改密码</string>
    <string name="setting_my_message">公告</string>
    <string name="del_all_text_message">清空</string>
    <string name="have_no_text_message">额 哦！ 江湖中竟没有一条消息</string>
    <string name="no_net_no_load">无网络,无法登录。</string>
    <string name="reset_factory">的手表恢复出厂设置,所有和手表关联的信息将被清空,您确定要这样做？</string>
    <string name="reset_factory_title">手表恢复出厂设置</string>
    <string name="name_not_content">用户名中不能含有@特殊字符！</string>
    <string name="height_not_null">请输入身高。</string>
    <string name="weight_not_null">请输入体重。</string>
    <string name="sim_not_null">请输入电话。</string>
    <string name="imei_not_null">请输入IMEI号。</string>
    <string name="imei_length_fifteen">请输入15位IMEI号。</string>
    <string name="ota_updata">手表蓝牙系统升级</string>
    <string name="password_confrim_not_null">请输入确认密码。</string>
    <string name="password_not_equals_confrim">两次密码不一致，请重新输入！</string>
    <string name="dialog_set_time">手表时间校准</string>
    <string name="email_not_null">请输入电子邮箱地址。</string>
    <string name="sign_success">恭喜您，注册成功！</string>
    <string name="sign_success_third">注册成功，正在登录…</string>
    <string name="net_request_err">网络连接失败，请检查网络！</string>
    <string name="net_overdute">登录已过期，请重新登录！</string>
    <string name="net_server_err">网络连接失败,请稍后再试！</string>
    <string name="remember_name">记住密码</string>
    <string name="text_jing_yin_adds">按加号添加第一条静音时段</string>
    <string name="load">登 录</string>
    <string name="net_upload_fail">img upload fails</string>
    <string name="load_success_load_all_tarcker">"登录成功. 正在加载…"</string>
    <string name="current_imei_repeated">此IMEI号已被使用，请输入正确的IMEI号！</string>
    <string name="text_watch_reset_factory_jing_gao">警告</string>
    <string name="last_address">最后位置:</string>
    <string name="dialog_message_signing">正在注册…</string>
    <string name="dialog_message_save_data">正在保存数据…</string>
    <string name="dialog_confirm_exit_edit">是否放弃修改？</string>
    <string name="dialog_confirm_exit_add">是否放弃添加对象？</string>
    <string name="dialog_confirm_delete_child">是否确定删除对象%s？</string>
    <string name="hint_input_name">请输入账号</string>
    <string name="image_content_description">图片</string>
    <string name="state_power_low">手表电量不足</string>
    <string name="state_power_low_more">手表电量偏低</string>
    <string name="state_power_normal">手表电量正常</string>
    <string name="state_power_high">手表电量正常</string>
    <string name="state_location_open">位置定时更新开启</string>
    <string name="state_location_close">位置定时更新关闭</string>
    <string name="state_send_sim_close_request_net">发送位置关闭短信</string>
    <string name="state_imei_state_change">当前对象功能状态已更新。</string>
    <string name="state_location_message_success">位置跟随设置短信发送成功</string>
    <string name="state_location_message_err">位置跟随设置短信发送失败</string>
    <string name="state_sett_message_err">设置失败</string>
    <string name="notify_tickertext">您收到一条回复！</string>
    <string name="notify_contentTitle">设置当前位置。</string>
    <string name="notify_contentText">您收到了一条位置信息，请查看！</string>
    <string name="set_msg_send_failure">设置失败</string>
    <string name="set_msg_send_success">设置短信已送达</string>
    <string name="input_sim_num">此处填写手表的手机号码</string>
    <string name="getting_current_location">正在获取当前位置…</string>
    <string name="get_current_location">获取当前位置</string>
    <string name="check_all_objects_location">查看所有对象的位置</string>
    <string name="account_cannot_null">请输入账号</string>
    <string name="password_cannot_empty">请输入密码</string>
    <string name="login_success">恭喜您，登录成功！</string>
    <string name="request_error">请求错误，数据为空！</string>
    <string name="create_object">添加对象</string>
    <string name="_save">保存</string>
    <string name="_name">名字</string>
    <string name="person_data">个人资料</string>
    <string name="gender_colon">性 别:</string>
    <string name="_birthday">生 日</string>
    <string name="_height">身高:</string>
    <string name="_weight">体重:</string>
    <string name="height_unit">身高（cm）:</string>
    <string name="weight_unit">体重（kg）:</string>
    <string name="hint_height">身高</string>
    <string name="hint_weight">体重</string>
    <string name="associate_watch">手表关联信息</string>
    <string name="_number">手表号码:</string>
    <string name="_my_number">本机号码:</string>
    <string name="input_imei_num">手表的IMEI号码</string>
    <string name="add_local_phone_number">添加本机号码</string>
    <string name="check_object">查看对象</string>
    <string name="logining">正在登录…</string>
    <string name="confirmation_box">确认框</string>
    <string name="_imei">IMEI:</string>
    <string name="object_list">对象列表</string>
    <string name="_add">添加</string>
    <string name="location_through_base_station">查询历史位置</string>
    <string name="all_objects_location">查看所有对象位置</string>
    <string name="input_account">请输入用户名</string>
    <string name="check_data">查看资料</string>
    <string name="_update">修改</string>
    <string name="_edit_obj">编辑对象</string>
    <string name="_register">注 册</string>
    <string name="_password">密码</string>
    <string name="hit_confirm_password">请再次输入密码</string>
    <string name="user_name">用户名</string>
    <string name="_email">邮 箱</string>
    <string name="hit_email">用于找回密码</string>
    <string name="user_register">用户注册</string>
    <string name="user_agreement">用户协议</string>
    <string name="minute_3">3</string>
    <string name="acsp_user_agreement">我已阅读并同意</string>
    <string name="send_aut">获取验证码</string>
    <string name="btn_cancel">取消</string>
    <string name="sild_hit_set">碰撞检测等级</string>
    <string name="hit_level_1">轻量</string>
    <string name="hit_level_2">一般</string>
    <string name="hit_level_3">严重</string>
    <string name="hit_level_4">重量</string>
    <string name="hit_current_level">设置手表的碰撞检测等级为：%d级。</string>
    <string name="title_delet_object">删除</string>
    <string name="text_play">播放</string>
    <string name="text_re_send">重新发送</string>
    <string name="text_mul_del">多条删除</string>
    <string name="send_2d_code_dialog_info">发送验证码之前，请先确保您的手表退回到主界面,才能正常收到验证码！</string>
    <string name="do_not_remaind">不再提醒</string>
    <string name="game_content_1">1.将手表正确佩戴手腕。默认为右手，可在下方更改，设定佩戴方式和实际一致才可正常玩游戏。</string>
    <string name="game_content_2">2.点击“开始游戏”即可开始游戏，单次游戏持续15分钟。（注意：静音时段开启时手表游戏静音）</string>
    <string name="game_content_3">3.教一教孩子学会如下游戏动作。</string>
    <string name="game_content_4_drum">4.手心向下，拍左边、拍右边、拍中间分别是三种鼓声，开始敲鼓游戏吧。</string>
</resources>