<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_1_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="28.0sp" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_warning" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/tv_dialog_validation_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/send_2d_code_dialog_info" />
    <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip">
        <ImageView android:id="@id/iv_dialog_validation_code_cb" android:background="@drawable/login_sign_pwd_off_on" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:text="@string/do_not_remaind" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_dialog_validation_code_ok" android:background="@drawable/dialog_btn_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/send_aut" android:layout_weight="1.0" />
        <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_dialog_validation_code_cancel" android:background="@drawable/dialog_btn_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/btn_cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>