<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:background="@drawable/game_text_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/game_content_1" />
        <TextView android:textSize="14.0sp" android:background="@drawable/game_text_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/game_content_2" />
        <TextView android:textSize="14.0sp" android:background="@drawable/game_text_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/game_content_3" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/game_text_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip">
            <TextView android:textSize="14.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/game_content_4_drum" />
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/game_drum" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>