<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/login_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:background="@color/common_title_bg_colors" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <LinearLayout android:gravity="center" android:id="@+id/line_hit_setting" android:background="@drawable/lin_common_bg_selector" android:layout_width="50.0dip" android:layout_height="fill_parent">
            <ImageView android:background="@drawable/top_back_btn1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <Button android:textSize="20.0sp" android:textColor="@color/text_white" android:id="@+id/btn_set_hit_act_save" android:background="@drawable/lin_common_bg_selector" android:layout_width="50.0dip" android:layout_height="fill_parent" android:text="@string/_save" android:layout_alignParentRight="true" />
        <TextView android:textSize="24.0sp" android:textColor="@color/text_white" android:gravity="center" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sild_hit_set" android:layout_toLeftOf="@+id/btn_set_hit_act_save" android:layout_toRightOf="@+id/line_hit_setting" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <View android:background="@drawable/whit_line2" android:layout_width="wrap_content" android:layout_height="1.0dip" />
        <com.cwtcn.kt.ui.TimeSeekBar android:orientation="vertical" android:id="@+id/bar" android:layout_width="fill_parent" android:layout_height="90.0dip"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:textSize="@dimen/follow_dialog_time_text_size" android:textColor="@color/text_white" android:gravity="center" android:id="@+id/tv_dialog_updata_min" android:visibility="invisible" android:layout_width="35.0dip" android:layout_height="20.0dip" android:text="@string/minute_3" />
            <SeekBar android:id="@+id/seekBar_update_time" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="38.0dip" android:maxHeight="10.0dip" android:max="120" android:progressDrawable="@drawable/sbcontrol_layor" android:minHeight="10.0dip" android:thumb="@drawable/sb_thumb_1" />
            <TextView android:textSize="@dimen/main_location_text_size" android:textColor="@color/text_white" android:gravity="center_horizontal" android:background="@drawable/rounded_rectangle_81_blue" android:paddingTop="5.0dip" android:layout_width="60.0dip" android:layout_height="24.0dip" android:layout_marginTop="5.0dip" android:text="@string/hit_level_1" />
            <TextView android:textSize="@dimen/main_location_text_size" android:textColor="@color/text_white" android:gravity="center_horizontal" android:background="@drawable/rounded_rectangle_81_blue" android:paddingTop="5.0dip" android:layout_width="60.0dip" android:layout_height="24.0dip" android:text="@string/hit_level_2" />
            <TextView android:textSize="@dimen/main_location_text_size" android:textColor="@color/text_white" android:gravity="center_horizontal" android:background="@drawable/rounded_rectangle_81_blue" android:paddingTop="5.0dip" android:layout_width="60.0dip" android:layout_height="24.0dip" android:text="@string/hit_level_3" />
            <TextView android:textSize="@dimen/main_location_text_size" android:textColor="@color/text_white" android:gravity="center_horizontal" android:background="@drawable/rounded_rectangle_81_blue" android:paddingTop="5.0dip" android:layout_width="60.0dip" android:layout_height="24.0dip" android:text="@string/hit_level_4" />
        </com.cwtcn.kt.ui.TimeSeekBar>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ImageView android:background="@drawable/warning_small" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="@color/text_black" android:id="@+id/tv_dialog_show_min" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/hit_current_level" />
        </LinearLayout>
        <Button android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@+id/btn_dialog_sure_" android:background="@drawable/btn_common_bg_selector_green" android:visibility="gone" android:layout_width="195.0dip" android:layout_height="43.0dip" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/_save" />
    </LinearLayout>
</LinearLayout>